Make changes on module